[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Arrow.png" type="Texture" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://Art/walkie_talkie2.png" type="Texture" id=3]
[ext_resource path="res://Art/Text_Box.png" type="Texture" id=4]
[ext_resource path="res://Art/Player_Sprite.png" type="Texture" id=5]
[ext_resource path="res://bitpap/BitPap.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://bitpap/BitPap.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )
player_profile = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 47, 514 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 899, 467 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )

[node name="Cold" type="Label" parent="."]
margin_left = 22.0
margin_top = 472.0
margin_right = 62.0
margin_bottom = 486.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "COLD"
align = 1
valign = 2

[node name="Cold2" type="Label" parent="."]
margin_left = 105.0
margin_top = 472.0
margin_right = 175.0
margin_bottom = 486.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "VERY COLD"
align = 1
valign = 2

[node name="Cold3" type="Label" parent="."]
margin_left = 232.0
margin_top = 472.0
margin_right = 342.0
margin_bottom = 486.0
rect_scale = Vector2( 1.5, 1.5 )
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "EXTREMELY COLD"
align = 1
valign = 2

[node name="Text_Container" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 67.0
margin_right = 64.0
margin_bottom = 99.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 64.0531, 15.1094 )
texture = ExtResource( 4 )

[node name="Container_Text" type="Label" parent="Text_Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.9602
margin_top = -14.668
margin_right = 223.04
margin_bottom = 54.332
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 25.6001, 6.39996 )
size_flags_stretch_ratio = 0.0
custom_colors/font_color = Color( 0.964706, 0.792157, 0.623529, 1 )
custom_fonts/font = SubResource( 2 )
text = "Press E"
align = 1
valign = 1
autowrap = true

[node name="Character_Photo" type="TextureRect" parent="Text_Container"]
margin_left = 8.0
margin_top = 4.0
margin_right = 34.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 13.12, 11.5999 )
texture = ExtResource( 5 )
